--- a/static/css/general.css
+++ b/static/css/general.css
@@ -42,3 +42,16 @@ a:visited {
 a:active {
     
 }
+
+
+
+
+.click-div {
+    background-image: url('empty.gif');
+    height: 100%;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    z-index: 1;
+}
